Add config endpoint for realtime mod
